# phrase-citation-rag

./: .env.example  .gitignore  README.md  pyproject.toml
data/notebook_cache/: README.md
data/raw_pdfs/: MANIFEST.md
docs/: _config.yml  index.md  index_projections_eval.md  index_projections_eval_results.json  notebooks.md  status.md
docs/phase-1a/: concepts.md  evaluation.md  index.md  overview.md  pipeline.md  (+1 more)
infra/: README.md  deploy.sh  main.bicep
notebooks/: 00_llm_smoke_test.ipynb  01_ingest_and_parse.ipynb  02_chunk_and_index.ipynb  02_chunking.ipynb  03_query_and_generate.ipynb  04_citation_alignment.ipynb  05_evaluation.ipynb  05a_synthetic_gt.ipynb  05b_public_benchmark.ipynb  demo_01_the_problem.ipynb  demo_02_pipeline_tour.ipynb  demo_03_metrics_that_matter.ipynb
research/: autoresearch-approach-chatgpt.md  autoresearch-approach-claude.md  sentence-level-citation-for-rag-chatgpt.md  sentence-level-citation-for-rag.md  technical-flow-post-generation-verification-chatgpt.md  technical-flow-post-generation-verification-claude.md
scripts/: bootstrap.sh  build_index.py  build_synth_gt.py  chunk.py  compare_layouts.py  download_corpus.py  ingest.py  review_gt.py  run_benchmark.py  run_eval.py  run_quality_gates.py
tests/: test_benchmarks.py  test_chunking.py  test_cite_align.py  test_eval.py  test_eval_math.py  test_generate.py  test_indexing.py  test_ingest.py  test_judge.py  test_layperson_review.py  test_llm_factory.py  test_notebooks_smoke.py  test_quality_gates.py  test_retrieval.py  test_schema.py  test_self_consistency.py  test_synth_gt.py
(+30 files in other folders)
